<resources>
    <string name="app_name">Location Design</string>
    <string name="register_account">Register Account</string>
    <string name="suggestion">Fill your details or continue with social media</string>
    <string name="india_num">+91</string>
    <string name="password">Enter your password</string>
    <string name="terms">I have read and agree with the</string>
    <string name="conditions">Terms and Conditions</string>
    <string name="and"> and the</string>
    <string name="policy">Privacy Policy</string>
    <string name="button_1">SIGN UP</string>
    <string name="account">Already Have Account?</string>
    <string name="login">Log in</string>
    <string name="under_line">---------------------------------------------------------------</string>
    <string name="under_line2">----------------------------------------------</string>
    <string name="or">Or continue with</string>
    <string name="villa">Villa, The Arsana Estate</string>
    <string name="villa2">include free-Rent</string>
    <string name="review">4.9/10</string>
    <string name="read_review">Read Reviews</string>
    <string name="location">Degla, Vietnam,rd 123 2b</string>
    <string name="hotel_bathroom">2 Bathrooms</string>
    <string name="hotel_bed">3 Beds</string>
    <string name="height">10*8.5 m2</string>
    <string name="details">Host Details</string>
    <string name="host">Host.12DE@example.com</string>
    <string name="amenities">Amenities</string>
    <string name="smart">Smart</string>
    <string name="personal_deatils">Personal Deatils</string>
    <string name="shipping">Shipping Fee</string>
    <string name="egp">EGP 209.97</string>
    <string name="egp2">EGP 13.97</string>
    <string name="tub">Hot Tub</string>
    <string name="ac">1 AC</string>
    <string name="hotel_pool">Pool</string>
    <string name="prise">1420</string>
    <string name="total_prise">Total Price</string>
    <string name="book">Book Now</string>
    <string name="button2">Next</string>
    <string name="swimming_area">Swimming Pool Area</string>
    <string name="swimming">Lorem psum is simply dummy text of the printing and ty pesetting industry.Lorem</string>
    <string name="reviews">Reviews</string>
    <string name="rate">4.6</string>
    <string name="rates">/s</string>
    <string name="rate_text">Based on 120 reviews</string>
    <string name="search">Search in Reviews</string>
    <string name="day">7 Night</string>
    <string name="night">Nights</string>
    <string name="sub_total">Subtotal</string>
    <string name="night_10">10 Nights</string>
    <string name="date5">20 Dec-25 Dec</string>
    <string name="confirm">Confirm</string>
    <string name="review_32">4.9(32 Review)</string>
    <string name="filter">Sort and Filter</string>
    <string name="filter2">Filter</string>
    <string name="date2">jan 10.2023 - jan 18.2023</string>
    <string name="date3">jan 10.2023</string>
    <string name="date4">jan 18.2023</string>
    <string name="check_in">Check in</string>
    <string name="check_out">Check out</string>
    <string name="mark">Mark The Time</string>
    <string name="sort_by">Sort by</string>
    <string name="verified">Verified</string>
    <string name="see_all">See all</string>
    <string name="property_type">Property Type</string>
    <string name="parking_lot">Parking Lot</string>
    <string name="facilities">Facilities/Environment</string>
    <string name="tasted">tasted</string>
    <string name="gym">GYM</string>
    <string name="pool">Pool</string>
    <string name="apply">Apply</string>
    <string name="dog">Pet Allowed</string>
    <string name="park">Park</string>
    <string name="egp_0">EGP 0</string>
    <string name="egp_4000">EGP 4000</string>
    <string name="egp_8000">EGP 8000</string>
    <string name="restaurant">Restaurant</string>
    <string name="child">Kids Friendly</string>
    <string name="user_name">User Name</string>
    <string name="date">Feb 04,2021</string>
    <string name="cairo">Cairo,Maadi</string>
    <string name="user_report">Lorem ipsum dolor sit amet,consectetur adipelit.Velit lectus amet hendrerit nulla mi iaculis.posuere faucis....</string>
    <string name="date_book">22 jul-31 jul</string>
    <string name="popular_filters">Popular Filters</string>
    <string name="rating">Rating</string>
    <string name="price">Price</string>
    <string name="stay_date">Stay Date</string>
    <string name="code">Have a promo code? Enter it!</string>
    <string name="free">Free Lunch Include</string>
    <string name="found">155 Properties found</string>
    <string name="Haiphong">Haiphong Hotel Vietnam</string>
    <string name="reviews_hotel">4.9/10(500 reviews)</string>
    <string name="special_discount">Special Discount</string>
    <string name="offer">10% OFF</string>
    <string name="location_hotel">Rd 203 Bidg 4</string>
    <string name="price2">920</string>
    <string name="per_month">per Month</string>
    <string name="fully_refundable">Fully Refundable </string>
    <string name="map">map</string>


</resources>