<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarActivity">

    <LinearLayout
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgclose"
            android:layout_width="22dp"
            android:layout_height="20dp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/cancel" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textColor="#0A8170"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date2"
            android:layout_marginLeft="@dimen/_65sdp"
            android:textSize="@dimen/_13ssp"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_in"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_50sdp"
            android:textSize="@dimen/_15ssp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_out"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_70sdp"
            android:textSize="@dimen/_15ssp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date3"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_45sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date4"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_50sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark"
            android:layout_margin="@dimen/_10sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="356dp">

        <ImageView
            android:layout_width="373dp"
            android:layout_height="330dp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/calendar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp">

        <Button
            android:id="@+id/btnnext"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/_190sdp"
            android:layout_marginTop="@dimen/_10sdp"

            android:background="@drawable/button"
            android:text="@string/button2"
            android:textColor="@color/white" />

    </LinearLayout>


    </LinearLayout>