<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_50sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/register_account"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_30sdp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggestion"
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_20sdp"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_margin="@dimen/_10sdp"

        android:background="@drawable/box5">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/india" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"

            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/downarrow2" />

        <TextView
            android:layout_width="54dp"
            android:layout_height="55dp"
            android:layout_marginTop="@dimen/_2sdp"
            android:inputType="number"
            android:text="@string/india_num"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="179dp"
            android:layout_height="55dp"
            android:layout_marginTop="@dimen/_2sdp"
            android:hint="enter number"
            android:background="@color/white"
            android:inputType="number"
            android:textSize="@dimen/_15sdp" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"

            android:layout_marginTop="@dimen/_14sdp"
            android:src="@drawable/done5" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_margin="@dimen/_10sdp"

        android:background="@drawable/box5">

        <EditText
            android:layout_width="293dp"
            android:layout_height="55dp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="@color/white"
            android:hint="@string/password"
            android:textSize="@dimen/_15ssp" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginLeft="@dimen/_10sdp"

            android:layout_marginTop="@dimen/_14sdp"
            android:src="@drawable/password" />






    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="76dp">

        <LinearLayout
            android:layout_width="61dp"
            android:layout_height="70dp">


            <CheckBox
                android:layout_width="30dp"
                android:layout_height="41dp"
                android:layout_marginLeft="@dimen/_10sdp"

                android:layout_marginTop="@dimen/_15sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/terms"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="136dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/conditions"
                    android:textColor="#0A8170"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/and"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/policy"
                    android:textColor="#0A8170"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Button
            android:id="@+id/btnsign"
            android:layout_width="363dp"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/button"
            android:text="@string/button_1"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:cardElevation="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_90sdp"
       >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/account"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_3sdp"
            android:textColor="#0A8170"
            android:text="@string/login"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/under_line"
            android:textColor="#0A8170"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_120sdp"
            android:text="@string/or"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="281dp"
        android:layout_height="63dp"
        android:layout_marginLeft="@dimen/_50sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="78dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"

            android:src="@drawable/facebook8" />

        <ImageView
            android:layout_width="78dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:src="@drawable/google2" />

        <ImageView
            android:layout_width="78dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:src="@drawable/apple" />


    </LinearLayout>


</LinearLayout>

