<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">



    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="274dp"
        android:orientation="vertical">


        <!--                <ImageView-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:id="@+id/imghotel"-->
        <!--                    android:layout_height="253dp"-->
        <!--                    android:layout_marginTop="10dp"-->
        <!--                    android:src="@drawable/villa" />-->

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imghotel"
            android:layout_width="366dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_10sdp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/villa"
            app:shapeAppearance="@style/CornerCut" />


    </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/villa"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_22ssp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/villa2"
                    android:textSize="@dimen/_22ssp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/review"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:id="@+id/imgreview"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/eye" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtreview"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/read_review"
                    android:textColor="#0A8170" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="370dp"
                android:layout_height="41dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/pin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/location"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="381dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/bathroom" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/hotel_bathroom"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/bed" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/hotel_bed"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/height" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/height"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:layout_margin="@dimen/_10sdp"

                android:background="@drawable/box5">

                <ImageView
                    android:layout_width="43dp"
                    android:layout_height="42dp"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/girl2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:text="@string/details"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/host"
                        android:textSize="@dimen/_10ssp"

                        android:textStyle="bold" />


                </LinearLayout>

                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="39dp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:src="@drawable/message" />

                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="39dp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:src="@drawable/call2" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="163dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="143dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/amenities"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_22ssp"
                    android:textStyle="bold" />

            </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="116dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="79dp"
                android:layout_height="67dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/smart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:text="@string/smart"
                android:textSize="@dimen/_15ssp"

                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="81dp"
            android:layout_height="123dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="49dp"
                android:layout_height="41dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/tub" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/tub"
                android:textSize="@dimen/_15ssp"

                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="74dp"
            android:layout_height="120dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="49dp"
                android:layout_height="41dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/ac" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/ac"
                android:textSize="@dimen/_15ssp"

                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="114dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="49dp"
                android:layout_height="41dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/pull" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/hotel_pool"
                android:textSize="@dimen/_15ssp"

                android:textStyle="bold" />


        </LinearLayout>



</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="39dp"
                android:layout_height="27dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/dollar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="189dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="89dp"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/prise"
                    android:textColor="#0A8170"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:layout_width="89dp"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/total_prise"

                    android:textSize="@dimen/_10ssp" />


            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnbooknow"
                android:text="@string/book"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_100sdp"
                android:background="@drawable/button"
                android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>
</LinearLayout>

